--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@types/three": "^0.180.0",
+    "axios": "^1.13.2",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
