--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.546.0",
