--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@trpc/next": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/pdfkit": "^0.17.4",
     "@types/three": "^0.180.0",
     "axios": "^1.13.2",
     "better-auth": "^1.3.28",
@@ -67,6 +68,7 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
+    "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
