--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "next": "15.5.9",
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
-    "puppeteer": "^24.36.0",
+    "@sparticuz/chromium": "^131.0.1",
+    "puppeteer-core": "^24.0.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
