--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "email": "email dev",
     "seed:rank-test": "tsx scripts/seed-rank-test.ts",
     "report:staking-users": "tsx scripts/staking-user-summary.ts",
-    "audit:withdrawals": "tsx scripts/withdrawal-daily-audit.ts"
+    "audit:withdrawals": "tsx scripts/withdrawal-daily-audit.ts",
+    "test:payout-vercel": "tsx scripts/test-payout-vercel-local.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -73,7 +74,7 @@
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
     "@sparticuz/chromium": "^131.0.1",
-    "puppeteer-core": "^24.0.0",
+    "playwright-core": "^1.48.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
