--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "next": "15.5.9",
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
-    "@sparticuz/chromium": "^131.0.1",
+    "@vercel/og": "^0.6.2",
     "playwright-core": "^1.48.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
