--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@trpc/next": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@vercel/og": "^0.6.2",
     "@types/pdfkit": "^0.17.4",
     "@types/three": "^0.180.0",
     "axios": "^1.13.2",
